--- a/src/app/empleados/form.component.html
+++ b/src/app/empleados/form.component.html
@@ -75,9 +75,11 @@
             </div>
 
             <div class="form-group row">
-                <label for="fechaContrato" class="col-form-label col-sm-2">Fecha de contr.</label>
+                <label for="fechaContrato" class="col-form-label col-sm-2">Fecha de contratación</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" [(ngModel)]="empleado.fechaContrato" name="fechaContrato">
+                    <input [matDatepicker]="myDatepicker" class="form-control" [(ngModel)]="empleado.fechaContrato" name="fechaContrato" style="display: inline; width: 150px;">
+                    <mat-datepicker-toggle [for]="myDatepicker"></mat-datepicker-toggle>
+                    <mat-datepicker #myDatepicker></mat-datepicker>
                 </div>
             </div>
 
