Implementacion de seleccionar y table-responsive

--- a/src/app/empleados/detalle/detalle.component.html
+++ b/src/app/empleados/detalle/detalle.component.html
@@ -18,6 +18,7 @@
                                 <ul *ngIf="empleado" class="list-group mb-3">
                                     <li class="list-group-item list-group-item-primary">{{empleado.nombre}}</li>
                                     <li class="list-group-item">{{empleado.apellido}}</li>
+                                    <li class="list-group-item">{{empleado.tipoIdentificacion.tipoIdentificacion}}</li>
                                     <li class="list-group-item">{{empleado.numeroIdentificacion}}</li>
                                     <li class="list-group-item">{{empleado.telefono}}</li>
                                     <li class="list-group-item">{{empleado.celular}}</li>
