--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -2,7 +2,7 @@
 
 <div class="card border-secondary mb-3 mt-3">
     <div class="card-header ">Empleados</div>
-    <div class="card-body text-secondary ">
+    <div class="card-body text-secondary table-responsive">
         <h5 class="card-title ">Listado de empleados</h5>
 
         <div class="my-2 text-left">
