--- a/src/app/empleados/form.component.html
+++ b/src/app/empleados/form.component.html
@@ -39,6 +39,17 @@
             </div>
 
             <div class="form-group row">
+                <label for="tipoIdentificacion" class="col-form-label col-sm-2">Tipo de identificación</label>
+                <div class="col-sm-6">
+                    <!-- comparewith para que aparezca el editar -->
+                    <select [compareWith]="compararIdentificacion" class="form-control" [(ngModel)]="empleado.tipoIdentificacion" name="tipoIdentificacion" style="width: 350px;">
+                        <option [ngValue]="undefined">--- Seleccionar el tipo de identificación ---</option>
+                        <option *ngFor="let item of tiposIdentificacion" [ngValue]="item">{{item.tipoIdentificacion}}</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group row">
                 <label for="numeroIdentificacion" class="col-form-label col-sm-2">No. identificación</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" [(ngModel)]="empleado.numeroIdentificacion" name="numeroIdentificacion" #numeroIdentificacion="ngModel">
