--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -7,7 +7,7 @@
 
         <div class="my-2 text-left">
             <!-- routerLink es un directiva que permite crear links o enlaces hacia rutas internas que estan registradas en app.module -->
-            <button class="btn btn-rounded btn-primary" type="button" [routerLink]="['/empleados/form']" routerLinkActive="router-link-active">Crear empleado</button>
+            <button *ngIf="authService.hasRole('ROLE_ADMIN')" class="btn btn-rounded btn-primary" type="button" [routerLink]="['/empleados/form']" routerLinkActive="router-link-active">Crear empleado</button>
         </div>
         <div *ngIf="empleados?.length == 0" class="aler alert-info">
             No hay registros en la base de datos!
@@ -16,20 +16,20 @@
 
             <thead>
                 <tr>
-                    <th># Perfil</th>
+                    <th *ngIf="authService.hasRole('ROLE_USER')"># Perfil</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
                     <th>No. Identificación</th>
                     <th>Celular</th>
                     <th>Fecha de Contr.</th>
-                    <th>Editar</th>
-                    <th>Eliminar</th>
+                    <th *ngIf="authService.hasRole('ROLE_ADMIN')">Editar</th>
+                    <th *ngIf="authService.hasRole('ROLE_ADMIN')">Eliminar</th>
                 </tr>
             </thead>
 
             <tbody>
                 <tr *ngFor="let empleado of empleados">
-                    <td>
+                    <td *ngIf="authService.hasRole('ROLE_USER')">
                         <!-- si existe la foto o sea diferente a nulo -->
                         <img (click)="abrirModal(empleado)" *ngIf="empleado?.foto" src="http://localhost:8080/api/uploads/img/{{empleado.foto}}" alt="{{empleado.foto}}" class="img-thumbnail rounded" style="width: 64px; cursor:pointer">
                         <img (click)="abrirModal(empleado)" *ngIf="!empleado?.foto" src="http://localhost:8080/images/no-usuario.png" alt="Sin foto" class="img-thumbnail rounded" style="width: 64px; cursor:pointer">
@@ -40,10 +40,10 @@
                     <td> {{empleado.celular}} </td>
                     <!-- El caracter | es el pipe en angular -->
                     <td> {{empleado.fechaContrato | date:"dd MMMM, yyyy"}} </td>
-                    <td>
+                    <td *ngIf="authService.hasRole('ROLE_ADMIN')">
                         <button type="button" name="editar" [routerLink]="['/empleados/form', empleado.idEmpleado]" class="btn btn-secondary btn-sm">Editar</button>
                     </td>
-                    <td>
+                    <td *ngIf="authService.hasRole('ROLE_ADMIN')">
                         <button type="button" name="eliminar" (click)='delete(empleado)' class="btn btn-danger btn-sm">Eliminar</button>
                     </td>
                 </tr>
