--- a/src/app/empleados/form.component.html
+++ b/src/app/empleados/form.component.html
@@ -65,16 +65,23 @@
             <div class="form-group row">
                 <label for="email" class="col-form-label col-sm-2">Email</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" [(ngModel)]="empleado.email" name="email" #email="ngModel">
+                    <input type="text" class="form-control" [(ngModel)]="empleado.username" name="username" #username="ngModel">
                     <!-- required email -->
-                    <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
-                        <div *ngIf="email.errors.required">
+                    <div class="alert alert-danger" *ngIf="username.invalid && (username.dirty || username.touched)">
+                        <div *ngIf="username.errors.required">
                             El email es requerido
                         </div>
-                        <div *ngIf="email.errors.email">
+                        <div *ngIf="username.errors.email">
                             El email debe tener un formato válido
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="celular" class="col-form-label col-sm-2">Contraseña</label>
+                <div class="col-sm-6">
+                    <input type="password" class="form-control" [(ngModel)]="empleado.password" name="password">
                 </div>
             </div>
 
