--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,24 +6,24 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/directivas">Directivas</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/empleados">Empleados</a>
+                <a class="nav-link" [routerLink]="['/empleados']">Empleados</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+        </ul>
+
+        <ul class="navbar-nav navbar-right">
+            <li *ngIf="!authService.isAuthenticated()">
+                <a [routerLink]="['/login']" class="btn btn-outline-dark">Iniciar sesión</a>
+            </li>
+            <li *ngIf="authService.isAuthenticated()" class="dropdown">
+                <a class="btn btn-outline-dark dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  {{authService.empleado.nombre}}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <button (click)="logout()" class="dropdown-item" type="submit">Cerrar sesión</button>
                 </div>
             </li>
         </ul>
