--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+    --input-padding-x: 1.5rem;
+    --input-padding-y: .75rem;
+}
+
 html {
     position: relative;
     min-height: 100%;
