--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -1,6 +1,6 @@
 <detalle-empleado *ngIf="empleadoSeleccionado" [empleado]="empleadoSeleccionado"></detalle-empleado>
 
-<div class="card border-secondary mb-3 mt-3">
+<div class="container card border-secondary mb-3 mt-3">
     <div class="card-header ">Empleados</div>
     <div class="card-body text-secondary table-responsive">
         <h5 class="card-title ">Listado de empleados</h5>
