--- a/src/app/empleados/form.component.html
+++ b/src/app/empleados/form.component.html
@@ -1,7 +1,7 @@
-<ul class="alert alert-danger" *ngIf="errores?.length > 0">
+<ul class="container alert alert-danger pl-4" *ngIf="errores?.length > 0">
     <li *ngFor="let itemErr of errores"> {{itemErr}} </li>
 </ul>
-<div class="card bg-white mt-3">
+<div class="container card bg-white mt-3">
     <div class="card-header"> {{titulo}} </div>
     <div class="card-body">
 
@@ -93,11 +93,32 @@
             </div>
 
             <div class="form-group row">
+                <label for="telefono" class="col-form-label col-sm-2">Teléfono</label>
+                <div class="col-sm-6">
+                    <input type="number" class="form-control" [(ngModel)]="empleado.telefono" name="telefono">
+                </div>
+            </div>
+
+            <div class="form-group row">
                 <label for="fechaContrato" class="col-form-label col-sm-2">Fecha de contratación</label>
                 <div class="col-sm-6">
                     <input [matDatepicker]="myDatepicker" class="form-control" [(ngModel)]="empleado.fechaContrato" name="fechaContrato" style="display: inline; width: 150px;">
                     <mat-datepicker-toggle [for]="myDatepicker"></mat-datepicker-toggle>
                     <mat-datepicker #myDatepicker></mat-datepicker>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="direccion" class="col-form-label col-sm-2">Dirección</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" [(ngModel)]="empleado.direccion" name="direccion">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="barrio" class="col-form-label col-sm-2">Barrio</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" [(ngModel)]="empleado.barrio" name="barrio">
                 </div>
             </div>
 
