--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,7 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.back-body {
+    background: linear-gradient(to right, #0a205e, #8498b0);
+}
