--- a/src/app/empleados/form.component.html
+++ b/src/app/empleados/form.component.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="form-group row">
-                <label for="celular" class="col-form-label col-sm-2">Contraseña</label>
+                <label for="password" class="col-form-label col-sm-2">Contraseña</label>
                 <div class="col-sm-6">
                     <input type="password" class="form-control" [(ngModel)]="empleado.password" name="password">
                 </div>
