--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <!-- directiva donde se van a renderizar y mostar el contenido de cada ruta -->
     <router-outlet *ngIf="authService.isAuthenticated()"></router-outlet>
 </div>
-<app-footer></app-footer>
+<app-footer *ngIf="authService.isAuthenticated()"></app-footer>
 
 <!-- 
 *ngIf="!authService.isAuthenticated() *ngIf="authService.isAuthenticated()" *ngIf="authService.isAuthenticated()" *ngIf="authService.isAuthenticated()" -->
