--- a/src/app/empleados/login.component.html
+++ b/src/app/empleados/login.component.html
@@ -1,25 +1,34 @@
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-                <div class="card card-signin my-5">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">{{titulo}}</h5>
-                        <form class="form-signin" method="post">
-                            <div class="form-label-group">
-                                <input [(ngModel)]="empleado.username" type="text" id="username" name="username" class="form-control" placeholder="Nombre de usuario" required autofocus>
-                                <label for="username">Nombre de usuario</label>
-                            </div>
+    <div class="layer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+                    <div class="card card-signin my-5">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">{{titulo}}</h5>
+                            <form class="form-signin" method="post">
+                                <div class="form-label-group">
+                                    <input [(ngModel)]="empleado.username" type="text" id="username" name="username" class="form-control" placeholder="Nombre de usuario" required autofocus>
+                                    <label for="username">Nombre de usuario</label>
+                                </div>
 
-                            <div class="form-label-group">
-                                <input [(ngModel)]="empleado.password" type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
-                                <label for="password">Contraseña</label>
-                            </div>
+                                <div class="form-label-group">
+                                    <input [(ngModel)]="empleado.password" type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
+                                    <label for="password">Contraseña</label>
+                                </div>
 
-                            <input (click)="login()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" value="Ingresar">
-                            <br>
+                                <input (click)="login()" class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" value="Ingresar">
+                                <br>
+                            </form>
+                            <!--<div class="container alert alert-danger pl-4" *ngIf="errores?.length > 0">
+                            <span>{{errores}}</span>
+                        </div>-->
+                            <p *ngIf="errores?.length > 0">
+                                <ngb-alert [dismissible]="false" type="danger" *ngIf="errores" (close)="errores">{{ errores }}</ngb-alert>
+                            </p>
                             <hr class="my-4">
-                        </form>
+                            <p class="text-center copyr">&copy; jamesjfgv@gmail.com - 2020</p>
+                        </div>
                     </div>
                 </div>
             </div>
