--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer bg-dark rounded-top text-center mt-4">
     <div class="container py-2">
         <p class="text-white my-2">
-            &copy; {{ autor.nombre + ' ' + autor.apellido + ' - ' + autor.correo}}
+            &copy; {{ autor.nombre + ' ' + autor.apellido + ' - ' + autor.correo}} - 2020
         </p>
     </div>
 </footer>
