--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e8e2db;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">{{title}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,9 +15,12 @@
             <li class="nav-item" routerLinkActive="active" *ngIf="authService.hasRole('ROLE_ADMIN')">
                 <a class="nav-link" [routerLink]="['/perfiles']">Roles</a>
             </li>
+            <li class="nav-item" routerLinkActive="active" *ngIf="authService.hasRole('ROLE_ADMIN')">
+                <a class="nav-link" [routerLink]="['/pacientes']">Pacientes</a>
+            </li>
         </ul>
 
-        <ul class="navbar-nav navbar-right">
+        <ul class="navbar-nav navbar-right pr-5">
             <li *ngIf="!authService.isAuthenticated()">
                 <a [routerLink]="['/login']" class="btn btn-outline-dark">Iniciar sesión</a>
             </li>
